ZumZumFinancials_Dev1/src/objects/BankReconcile__c.object
<CustomObject>
    <fields>
        <fullName>Bank_Account__c</fullName>
        <label>Bank Account Name</label>
        <referenceTo>Bank_Account__c</referenceTo>
        <relationshipLabel>BankReconcile</relationshipLabel>
        <relationshipName>BankReconcile</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Charges_Amount__c</fullName>
        <label>Charges of Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Charges_Date__c</fullName>
        <label>Date of Charges</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Charges_Nominal_Account__c</fullName>
        <label>Nominal Account of Charges</label>
        <referenceTo>Nominal_Account__c</referenceTo>
        <relationshipLabel>BankReconcile (Charges Nominal Account)</relationshipLabel>
        <relationshipName>BankReconcile1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ending_Balance__c</fullName>
        <label>Ending Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Interest_Amount__c</fullName>
        <label>Interest of amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Interest_Date__c</fullName>
        <label>Date of Interest</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Interest_Nominal_Account__c</fullName>
        <label>Nominal Account of Interest</label>
        <referenceTo>Nominal_Account__c</referenceTo>
        <relationshipLabel>BankReconcile</relationshipLabel>
        <relationshipName>BankReconcile</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reference__c</fullName>
        <label>Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Statement_Date__c</fullName>
        <label>Statement Date</label>
        <type>Date</type>
    </fields>
    <label>BankReconcile</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>BankReconcile Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BankReconcile</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>